--- a/src/pages/home/Home2.module.css
+++ b/src/pages/home/Home2.module.css
@@ -32,7 +32,7 @@ text-decoration: none;
 transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-img {
+.img {
     max-width: 100%;
     border-radius: 12px;
     opacity: 0.85;
