--- a/src/index.css
+++ b/src/index.css
@@ -21,19 +21,7 @@ body, html {
   min-width: 320px;
   margin: 0 auto;
   padding: 0;
-  
-}
 
-@media (max-width: 1200px) {
-  .layout {
-    padding: 0 20px;
-  }
-}
-
-@media (max-width: 400px) {
-  .layout {
-    padding: 0 4px ;
-  }
 }
 
 nav {
@@ -48,21 +36,37 @@ nav .links {
   align-items: center;
 }
 
-nav .name {
+nav .name a {
   display: inline-block;
   text-align: left;
   font-size: 2.5rem;
+  grid-column: span 2;
 }
 
 nav a {
-  display: inline-block;
-  margin-left: 20px;
   font-weight: 600;
   padding-bottom: 8px;
   text-decoration: none;
   color: #f1f1f1;
+  font-size: 1.1rem;
+  margin-left: 20px;
 }
 
+nav .name a {
+  margin-left: 0;
+}
+
+@media (max-width: 1200px) {
+  .layout {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .layout {
+    padding: 0 4px;
+  }
+}
 
 
 
