--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -3,24 +3,30 @@
     margin: 50px 40px;
 }
 
+.projects .heading {
+    text-align: center;
+    font-size: 1.5rem;
+    margin:  90px 0;
+}
+
  .grid {
     display: grid;
     gap: 64px;
 }
 
  .gridCols {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-columns: repeat(1, 1fr);
 }
 
-@media (min-width: 640px) {
+@media (min-width: 800px) {
     .gridCols {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1080px) {
     .gridCols {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
