--- a/src/pages/resume/Resume.module.css
+++ b/src/pages/resume/Resume.module.css
@@ -1,6 +1,62 @@
 .resume .icons-container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     gap: 20px;
+}
+
+.resume {
+    color: #f1f1f1;;
+    line-height: 1.5;
+    padding: 20px 0;
+}
+
+.header {
+    border-bottom: 2px solid #f1f1f1;;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.header h1 {
+    font-size: 2em;
+    margin: 0;
+    color: #006AFF;
+}
+
+.header .title {
+    font-size: 1.2em;
+    margin:  0;
+    font-weight: bold;
+}
+
+.summary,
+.section {
+    margin-bottom: 20px;
+}
+
+.section h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.section ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+.section ul li {
+    margin-bottom: 10px;
+}
+
+.section div {
+    margin-bottom: 20px;
+}
+
+.section div h3 {
+    font-size: 1.2em;
+    margin: 0;
+}
+
+.section div p {
+    margin: 5px 0;
 }
