--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -5,7 +5,6 @@
 
 .hero h1 {
     font-size: 4rem;
-    
 }
 
 .hero .name {
@@ -47,15 +46,21 @@
     /* Equivalent to leading-none */
 }
 
+.role {
+    color:#006AFF ;
+    font-weight: bold;
+}
+
 .header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 40px;
     align-items: center;
+    margin: 40px 0;
 }
 
 .header h2 {
-    font-size: 4em;
+    font-size: 4.5em;
 }
 
 .header h3 {
@@ -117,6 +122,7 @@
         font-size: 1em;
         text-align: center;
     }
+   
 }
 
 @media (max-width: 800px) {
