--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 3rem;
 }
 
 @media (max-width: 992px) {
