--- a/src/pages/resume/Resume.module.css
+++ b/src/pages/resume/Resume.module.css
@@ -5,6 +5,12 @@
     gap: 20px;
 }
 
+.icons-container a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: #f1f1f1
+}
+
 .resume {
     color: #f1f1f1;;
     line-height: 1.5;
