--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -1,12 +1,12 @@
 .technologies {
-    padding: 50px 10px
+    padding: 50px 0
 }
 
 .heading {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-bottom: 50px;
+    padding: 50px 0;
 }
 
 .grid-container {
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 @media (max-width: 992px) {
