--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -22,11 +22,8 @@
     color: white;
     margin: 15px 0;
     padding: 0.75rem 1.25rem;
-    /* Equivalent to px-5 py-3 */
     border-radius: 0.375rem;
-    /* Equivalent to rounded */
     font-weight: 600;
-    /* Equivalent to font-semibold */
     display: inline-block;
     width: auto;
     text-align: center;
@@ -37,13 +34,11 @@
 .hero .btn:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
-    /* Equivalent to focus:ring */
 }
 
 .hero .btn span {
     display: inline-block;
     line-height: 1;
-    /* Equivalent to leading-none */
 }
 
 .role {
@@ -90,6 +85,12 @@
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .img {
     max-width: 100%;
     border-radius: 12px;
@@ -111,33 +112,33 @@
     .header {
         grid-template-columns: 1fr;
     }
-
     .header h2 {
         font-size: 2.5em;
         text-align: center;
     }
-
     .header h3 {
         font-size: 1.5em;
         text-align: center;
     }
-
     .header p {
         font-size: 1em;
         text-align: center;
     }
-   
-}
-
-@media (max-width: 800px) {
     .btn-container {
         align-items: center;
         display: flex;
         justify-content: center;
         width: 100%;
     }
-
     .btn {
         margin-top: 20px;
     }
+    .img {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        object-fit: cover;
+        align-items: center;
+    }
 }
+
