--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -52,7 +52,7 @@
 
 .header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-gap: 40px;
     align-items: center;
     margin: 40px 0;
@@ -92,19 +92,23 @@
 }
 
 .img {
-    max-width: 100%;
     border-radius: 12px;
-    opacity: 0.85;
-    filter: grayscale(40%);
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+    align-items: center;
 }
 
 @media (max-width: 1100px) {
     .header h2 {
         font-size: 3rem;
     }
-
     .header h3 {
         font-size: 2rem;
+    }
+    .img {
+        width: 400px;
+        height: 400px;
     }
 }
 
@@ -137,8 +141,6 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        object-fit: cover;
-        align-items: center;
     }
 }
 
