--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -1,23 +1,22 @@
 .hero {
-    text-align: center;
-    padding: 80px 0;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 40px;
+    align-items: center;
+    margin: 40px 0;
 }
 
-.hero h1 {
+h1 {
     font-size: 4rem;
 }
 
-.hero .name {
-    color: var(--highlight);
+h3 {
+    font-size: 3em;
+    font-weight: 400;
+    margin-bottom: 20px;
 }
 
-.hero h2 {
-    margin: 30px auto;
-    font-size: 2rem;
-    color: var(--highlight);
-}
-
-.hero .btn {
+.btn {
     background-color: var(--highlight);
     color: white;
     margin: 15px 0;
@@ -31,12 +30,12 @@
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.hero .btn:focus {
+.btn:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.6);
 }
 
-.hero .btn span {
+.btn span {
     display: inline-block;
     line-height: 1;
 }
@@ -50,41 +49,6 @@
     color: var(--highlight);
 }
 
-.header {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 40px;
-    align-items: center;
-    margin: 40px 0;
-}
-
-.header h2 {
-    font-size: 4.5em;
-}
-
-.header h3 {
-    font-size: 3em;
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-
-.btn {
-    background-color: var(--highlight);
-    color: white;
-    margin: 15px 0;
-    padding: 0.75rem 1.25rem;
-    /* Equivalent to px-5 py-3 */
-    border-radius: 0.375rem;
-    /* Equivalent to rounded */
-    font-weight: 600;
-    /* Equivalent to font-semibold */
-    display: inline-block;
-    width: auto;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
 .img-container {
     display: flex;
     justify-content: center;
@@ -93,17 +57,17 @@
 
 .img {
     border-radius: 12px;
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     object-fit: cover;
     align-items: center;
 }
 
 @media (max-width: 1100px) {
-    .header h2 {
-        font-size: 3rem;
+    h1 {
+        font-size: 3.5rem;
     }
-    .header h3 {
+    h3 {
         font-size: 2rem;
     }
     .img {
@@ -116,15 +80,15 @@
     .header {
         grid-template-columns: 1fr;
     }
-    .header h2 {
-        font-size: 2.5em;
+    h1 {
+        font-size: 3em;
         text-align: center;
     }
-    .header h3 {
+    h3 {
         font-size: 1.5em;
         text-align: center;
     }
-    .header p {
+    p {
         font-size: 1em;
         text-align: center;
     }
