--- a/src/index.css
+++ b/src/index.css
@@ -9,26 +9,14 @@
   --highlight: #006AFF;
 }
 
-body, html {
+body {
   background: var(--backgroundColor);
   color: #f1f1f1;
   margin: 0;
   font-family: "Montserrat";
 }
 
-.layout {
-  max-width: 1250px;
-  min-width: 320px;
-  margin: 0 auto;
-  padding: 0 40px;
 
-}
-
-@media (max-width: 400px) {
-  .layout {
-    padding: 0 20px;
-  }
-}
 
 
 
