--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -20,9 +20,14 @@ nav .name a {
 
 nav a {
     font-weight: 600;
-    padding-bottom: 8px;
+    padding-bottom: 10px;
     text-decoration: none;
     color: #f1f1f1;
     font-size: 1.1rem;
     margin-left: 20px;
+    border-bottom: 2px solid transparent;
+}
+
+nav  a:hover, a:focus, a:active {
+    border-bottom-color: var(--highlight);
 }
