--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -6,7 +6,7 @@
     margin: 40px 0;
 }
 
-h1 {
+.hero h1 {
     font-size: 4rem;
 }
 
@@ -58,10 +58,10 @@ h1 {
 }
 
 @media (max-width: 1100px) {
-    h1 {
+    .hero h1 {
         font-size: 3.5rem;
     }
-    h3 {
+    .hero h3 {
         font-size: 2rem;
     }
     .img {
@@ -71,18 +71,18 @@ h1 {
 }
 
 @media (max-width: 800px) {
-    .hero{
+    .hero {
         grid-template-columns: 1fr;
     }
-    h1 {
+    .hero h1 {
         font-size: 3em;
         text-align: center;
     }
-    h3 {
+    .hero h3 {
         font-size: 1.5em;
         text-align: center;
     }
-    p {
+    .hero p {
         font-size: 1em;
         text-align: center;
     }
