--- a/src/components/my-projects/MyProjects.module.css
+++ b/src/components/my-projects/MyProjects.module.css
@@ -34,13 +34,14 @@ article {
 
 .image-container {
     overflow: hidden;
+    height: 250px;
 }
 
 .image {
     object-fit: cover;
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
     transition: transform 0.3s ease;
 }
 
@@ -61,8 +62,6 @@ article {
     color: #374151;
     text-align: left;
 }
-
-
 
 .techUsed {
     font-size: 14px;
