--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -57,6 +57,22 @@
     align-items: center;
 }
 
+.loaderContainer {
+    display: flex;
+    justify-content: left;
+    /* Center the loaderWrapper container */
+    /* width: 100%; */
+    margin-top: 20px;
+}
+
+.loaderWrapper {
+    display: flex;
+    justify-content: flex-start;
+    /* Align loader to the left within its wrapper */
+    width: 100px;
+    /* Set a fixed width for the loaderWrapper */
+}
+
 @media (max-width: 1100px) {
     .hero h1 {
         font-size: 3.5rem;
@@ -102,3 +118,12 @@
     }
 }
 
+
+/* loader */
+.loader {
+    width: 10px;
+    height: 10px;
+    margin: 40px auto;
+    border-radius: 50%;
+    background: #fff;
+}
