Left side footer with Links and border created

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,17 +3,32 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    text-align: center;
+    text-align: left;
     margin-top: 50px;
-    font-weight: bold;
     padding: 40px 0;
-    font-weight: normal
+    border-top: 2px solid #f1f1f1;
+}
+
+.footer .container {
+    display: grid;
+    grid-template-columns: 9fr 3fr;
+}
+
+.footer .leftColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.footer .rightColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .footer a {
     color: var(--highlight);
     text-decoration: none;
-    font-size: 0.9em;
 }
 
 .year {
@@ -24,8 +39,8 @@
     padding: 5px 0;
     font-size: 0.9rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     gap: 5px;
 }
 
@@ -36,8 +51,9 @@
 
 .email {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     gap: 5px;
+
 }
 
