--- a/src/pages/resume/Resume.module.css
+++ b/src/pages/resume/Resume.module.css
@@ -18,7 +18,7 @@
 }
 
 .header {
-    border-bottom: 2px solid #f1f1f1;;
+    border-bottom: 2px solid #f1f1f1;
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
