--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -1,12 +1,7 @@
-.technologies {
-    padding: 50px 0
-}
-
 .heading {
-    text-align: center;
+    text-align: left;
     font-size: 1.5rem;
     font-weight: bold;
-    padding: 50px 0;
 }
 
 .grid-container {
