bigHeading is given highlight color

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 /* layout */
 :root {
-  --primary: #1aac83;
+  --primary: #ff6a00;
   --error: #e7195a;
   --backgroundColor: black;
   --highlight: #006AFF;
