--- a/src/components/new-hero/NewHero.module.css
+++ b/src/components/new-hero/NewHero.module.css
@@ -1,22 +1,26 @@
 .heroSection {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     align-items: flex-start;
     min-height: 100vh;
     height: 100vh;
-    padding: 0;
+    padding: 20px 0;
+}
+
+.heroSection .name {
+    margin: 0;
+    font-size: clamp(40px, 8vw, 80px);
 }
 
 .bigHeading {
     margin: 0;
     font-size: clamp(40px, 8vw, 80px);
+    color: var(--highlight);
 }
 
 .h1 {
     margin: 0 0 30px 4px;
-
     font-size: clamp(14px, 5vw, 16px);
     font-weight: 400;
 }
