--- a/src/components/new-hero/NewHero.module.css
+++ b/src/components/new-hero/NewHero.module.css
@@ -1,11 +1,12 @@
 .heroSection {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     align-items: flex-start;
     min-height: 100vh;
     height: 100vh;
-    padding: 20px 0;
+    padding: 0;
 }
 
 .heroSection .name {
