--- a/src/components/technologies/Technologies.module.css
+++ b/src/components/technologies/Technologies.module.css
@@ -1,7 +1,10 @@
-.heading {
+
+
+.techHeading {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
+    padding-bottom: 40px;
 }
 
 .grid-container {
